# filepaste

./: Cargo.toml
.github/workflows/: release-container-image.yml
benches/: main.rs
benches/storage/: encryption_benchmark.rs  mod.rs
src/: args.rs  config.rs  error.rs  gc.rs  lib.rs  main.rs  totp.rs
src/endpoint/: config.rs  handlers.rs  mod.rs
src/endpoint/lib/: mod.rs  sanitize_relative_path.rs
src/storage/: config.rs  encryption.rs  in_memory.rs  local.rs  mod.rs  retention.rs
static/: index.html
