[package]
name = "filepaste"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
clap = { version = "4.5.60", features = ["derive", "env"] }
confy = "2.0.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-actix-web = "0.7.21"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
