[package]
name = "filepaste"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/azamaulanaaa/filepaste.git"

[dependencies]
actix-files = "0.6.10"
actix-web = "4.13.0"
actix-web-httpauth = "0.8.2"
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.89"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
clap = { version = "4.5.60", features = ["derive", "env"] }
confy = "2.0.0"
futures = "0.3.32"
futures-util = "0.3.32"
rand = { version = "0.10.0", features = ["thread_rng"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["io"] }
tracing = "0.1.44"
tracing-actix-web = "0.7.21"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
